--- a/src/scss/SurveyingPage.scss
+++ b/src/scss/SurveyingPage.scss
@@ -14,6 +14,50 @@
     padding: 2rem 0rem;
 }
 
+.material-input-container {
+
+    position: relative;
+    @include rfs(1.25rem, font-size);
+
+    &::before {
+        content: "";
+        border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        pointer-events: none;
+    }
+
+    &::after {
+        content: "";
+        border-bottom: 2px solid rgba(0, 0, 0, 0.42);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        pointer-events: none;
+        transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+
+        transform: scaleX(0);
+    }
+
+    &.active::after {
+        transform: scaleX(1) translateX(0)
+    }
+
+    .material-input {
+        text-align: center;
+        padding: 0.25rem 0rem;
+        display: block;
+        background: none;
+        border: 0;
+        outline: 0;
+        width: 100%;
+        color: currentColor;
+    }
+}
+
 .fixed-info-overlay {
 
     top: 0;
@@ -162,12 +206,12 @@
                 align-items: center;
                 font-weight: 400;
                 margin-top: 0.25rem;
-                font-size: 1.375rem;
+                font-size: 1.25rem;
 
                 .select-survey-checkbox {
                     margin-right: 0.5rem;
-                    height: 1.375rem;
-                    width: 1.375rem;
+                    height: 1.25rem;
+                    width: 1.25rem;
                 }
             }
 
