--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -260,6 +260,8 @@ ul {
 
     // Normal element
     svg {
+        width: 100%;
+        height: 100%;
         fill: var(--checkbox-color);
 
         &.checked {
