--- a/src/scss/PhishingPage.scss
+++ b/src/scss/PhishingPage.scss
@@ -9,8 +9,8 @@
 
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: flex-start;
+    justify-content: flex-start;
 
     @include rfs(112px 224px 32px 224px, padding);
 
