--- a/src/scss/SurveyingPage.scss
+++ b/src/scss/SurveyingPage.scss
@@ -12,50 +12,6 @@
     align-items: center;
 }
 
-.material-input-container {
-
-    position: relative;
-    @include rfs(1.25rem, font-size);
-
-    &::before {
-        content: "";
-        border-bottom: 1px solid rgba(0, 0, 0, 0.42);
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        pointer-events: none;
-    }
-
-    &::after {
-        content: "";
-        border-bottom: 2px solid rgba(0, 0, 0, 0.42);
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        pointer-events: none;
-        transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-
-        transform: scaleX(0);
-    }
-
-    &.active::after {
-        transform: scaleX(1) translateX(0)
-    }
-
-    .material-input {
-        text-align: center;
-        padding: 0.25rem 0rem;
-        display: block;
-        background: none;
-        border: 0;
-        outline: 0;
-        width: 100%;
-        color: currentColor;
-    }
-}
-
 .fixed-info-overlay {
 
     top: 0;
@@ -158,7 +114,7 @@
             justify-content: center;
             align-items: center;
             min-height: 10rem;
-            padding: 0rem 1.5rem;
+            @include rfs(0px 18px, padding);
             border-top-left-radius: var(--border-radius);
             border-top-right-radius: var(--border-radius);
 
@@ -181,6 +137,11 @@
         }
 
         .select-surveys-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            @include rfs(28px 18px, padding);
+
             padding: 1.75rem 1rem;
 
             .input-text {
@@ -193,6 +154,13 @@
                 border-bottom: 1px solid rgb(144, 143, 143);
                 border-radius: 0px;
             }
+
+            .select-surveys-inputs-container {
+                display: flex;
+                width: min-content;
+                justify-content: center;
+            }
+
 
             .select-socials-heading {
                 @include rfs(1.625rem, font-size);
@@ -394,6 +362,7 @@
         .survey-checkbox-label {
             @include rfs(20px, font-size);
             font-weight: 400;
+        
         }
 
         .survey-checkbox {
