--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -62,7 +62,7 @@ body {
 }
 
 section {
-    padding: 2rem 0rem;
+    padding: 32px 0px;
 
     &.alternate {
         background-color: #f2f2f2;
@@ -109,7 +109,7 @@ ul {
 }
 
 .button {
-    @include padding(0.75rem 1.25rem);
+    @include padding(12px 20px);
     @include font-size(1.5rem);
     border: 0px;
     transition: background-color 0.15s ease-in-out, box-shadow 0.25s ease-in-out, transform 0.25s ease-in-out;
@@ -182,7 +182,7 @@ ul {
     }
 
     &.footer-button {
-        padding: 0.75rem 1.25rem;
+        padding: 12px 20px;
         font-size: 1.25rem;
         border-radius: 0.25rem;
         width: 100%;
@@ -222,49 +222,6 @@ ul {
         --button-bg-color: #842eca;
         --bg-pressed-color: #6924a1;
         color: #FFFFFF
-    }
-}
-
-.material-input-container {
-
-    position: relative;
-    @include rfs(1.25rem, font-size);
-
-    &::before {
-        content: "";
-        border-bottom: 1px solid rgba(0, 0, 0, 0.42);
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        pointer-events: none;
-    }
-
-    &::after {
-        content: "";
-        border-bottom: 2px solid rgba(0, 0, 0, 0.42);
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        pointer-events: none;
-        transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-
-        transform: scaleX(0);
-    }
-
-    &.active::after {
-        transform: scaleX(1) translateX(0)
-    }
-
-    .material-input {
-        text-align: center;
-        padding: 0.25rem 0rem;
-        display: block;
-        background: none;
-        border: 0;
-        outline: 0;
-        color: currentColor;
     }
 }
 
