--- a/src/scss/PhishingPage.scss
+++ b/src/scss/PhishingPage.scss
@@ -28,6 +28,7 @@
             display: flex;
             flex-direction: column;
             background-color: white;
+            font-size: 14px;
             border: 1px solid rgba(0, 0, 0, 0.125);
             border-radius: 4px;
             min-width: 500px;
@@ -46,7 +47,6 @@
             }
 
             label {
-                font-size: 14px;
                 margin-bottom: 8px;
                 display: block;
             }
@@ -92,6 +92,19 @@
                 margin-top: 2px;
                 display: flex;
                 align-items: center;
+            }
+
+            a {
+                text-decoration: none;
+                color: #257bb2;
+                
+                &:visited {
+
+                }
+
+                &:hover {
+                    text-decoration: underline;
+                }
             }
 
             .question-circle {
