--- a/src/scss/ReportingPage.scss
+++ b/src/scss/ReportingPage.scss
@@ -1,5 +1,51 @@
 @import "./App.scss";
 
+
+.colored-score-counter {
+    font-weight: inherit;
+    font-size: inherit;
+    position: relative;
+    line-height: 1;
+    z-index: 1;
+
+    &::after {
+        bottom: -20%;
+        content: "";
+        display: block;
+        height: 20%;
+        left: 2px;
+        right: 2px;
+        position: absolute;
+        transition: .3s;
+        z-index: -1;
+        background-color: var(--underline-color);
+    }
+}
+
+.global-average-container {
+
+    user-select: none;
+
+    @include rfs(3.5rem, font-size);
+    font-weight: 800;
+
+    @include rfs(24px, margin-bottom);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .global-average-subheading {
+        @include rfs(1.5rem, font-size);
+        font-weight: 400;
+        text-align: center;
+    }
+
+    .colored-score-counter {
+        margin-bottom: 8px;
+    }
+}
+
 .reporting-page-container {
 
     min-height: 100vh;
@@ -21,21 +67,52 @@
 
         .tables-container {
 
+            @include rfs(1.375rem, font-size);
+            max-height: 400px;
+            overflow: auto;
+            max-width: 95%;
+            border: 1px solid #DDDDDD;
+
             .reporting-table {
 
-                td, th {
+                border-collapse: separate;
+                border-spacing: 0;
+
+                thead>tr {
+                    position: sticky;
+                    top: 0;
+                    background-color: white !important;
+                }
+
+                tr {
+                    background-color: white;
+
+                    &:nth-child(odd) {
+                        background-color: #eeeeee;
+                    }
+
+                    &:last-child>td {
+                        border-bottom: 0;
+                    }
+                }
+
+                td,
+                th {
                     padding: 8px;
                     text-align: left;
-                    border: 1px solid #DDDDDD;
+
+                    border-left: 1px solid #DDDDDD;
+                    border-bottom: 1px solid #DDDDDD;
+
+                    &:first-child {
+                        border-left: 0;
+                    }
                 }
 
                 th {
                     font-weight: bold;
+                    border-top: 0;
                 }
-
-                tr:nth-child(even) {
-                    background-color: #eeeeee;
-                  }
             }
         }
 
