--- a/src/scss/ReportingPage.scss
+++ b/src/scss/ReportingPage.scss
@@ -19,7 +19,12 @@
         justify-content: center;
         align-items: center;
 
+        .reporting-page-data {
+            width: 100%;
+        }
+
         .reporting-page-heading {
+            user-select: none;
             text-align: center;
             @include rfs(4.125rem, font-size);
             font-weight: 800;
@@ -83,7 +88,7 @@
         .participant-report-table-container {
 
             @include rfs(1.375rem, font-size);
-            max-height: 380px;
+            max-height: 350px;
             overflow: auto;
             border: 1px solid #DDDDDD;
 
