Added phishing scam warning

--- a/src/scss/PhishingPage.scss
+++ b/src/scss/PhishingPage.scss
@@ -99,7 +99,7 @@
                 color: #257bb2;
                 
                 &:visited {
-
+                    color:#6e25b2
                 }
 
                 &:hover {
@@ -124,6 +124,4 @@
             }
         }
     }
-
-
 }
